--- a/templates/table.html
+++ b/templates/table.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <h1 class="title">
-            熱中症危険度予測AI@神戸
+            神戸の熱中症危険度予測サイト　Kobe Hot Vis
         </h1>
         <nav>
             <ul class="nav_ul">
