--- a/static/css/style.css
+++ b/static/css/style.css
@@ -130,7 +130,7 @@ footer{
       display: none;
     }
     .title {
-        font-size: 20px;
+        font-size: 19px;
     }
 
     h1{
@@ -143,4 +143,11 @@ footer{
         margin-left: auto;
         margin-right: auto;
     }
+
+    .main_table{
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+    }
+    
   }
